@@ -20,7 +20,7 @@
 	<string>APPL</string>
 
 	<key>CFBundleShortVersionString</key>
-	<string>0.4.6-rc5</string>
+	<string>0.4.6</string>
 
 	<key>CFBundleSignature</key>
 	<string>nnbt</string>
